--- a/GWC/styles.css
+++ b/GWC/styles.css
@@ -40,7 +40,7 @@ h2 {
     font-size: 2em;
     color: #0c7474;
     padding: 3px 0;
-    padding-left: 50px;
+    padding-left: 80px;
     font-weight: 300;
     margin: auto;
   }
@@ -48,7 +48,7 @@ h2 {
 h3 {
     color: #0c7474;
     margin-left: 60px;
-    font-size: 23;
+    font-size: 30px;
     font-family: 'Arya';
 }
 
